--- a/index.html
+++ b/index.html
@@ -23,20 +23,29 @@
 
     <div class="container float-left">
       <div class="row">
-        <div
-          class="col col-sm-5 col-md-5 col-lg-5 ml-3 p-3 mb-2 bg-light text-dark"
-        >
+        <div class="col col-sm-5 col-md-5 col-lg-5 p-3 mb-2 bg-light text-dark">
           <h2 class="ml-3">Search for a city:</h2>
           <div class="row">
             <div class="col">
-              <form class="form-inline">
-                <div class="form-group mx-sm-3 mb-2">
-                  <input class="form-control" id="city" />
+              <div class="input-group mb-3">
+                <input
+                  id="city-input"
+                  type="text"
+                  class="form-control"
+                  placeholder="Enter city"
+                  aria-label="city"
+                  aria-describedby="searchBtn"
+                />
+                <div class="input-group-append">
+                  <button
+                    class="btn btn-outline-primary"
+                    type="button"
+                    id="searchBtn"
+                  >
+                    Search
+                  </button>
                 </div>
-                <button type="submit" class="btn btn-primary mb-2">
-                  Search
-                </button>
-              </form>
+              </div>
             </div>
           </div>
           <div id="prevCities" class="row">
@@ -44,31 +53,26 @@
           </div>
         </div>
 
-        <div class="col col-lg-6">     
+        <div class="col col-lg-7">
           <div class="row">
-            <div id="current" class="col border mb-3 ml-3 py-3 pl-4">
-              <div id="currentCity" class="row"><h2>Atlanta</h2></div>
-              <div id="currentTemp" class="row">90</div>
-              <div id="currentHumidity" class="row">80</div>
-              <div id="currentWind" class="row">70</div>
-              <div id="currentUV" class="row">6</div>
+            <div id="current" class="col border mb-3 py-3 pl-4">
+              <div id="currentCity" class="row"></div>
+              <div id="currentTemp" class="row"></div>
+              <div id="currentHumidity" class="row"></div>
+              <div id="currentWind" class="row"></div>
+              <div id="currentUV" class="row"></div>
             </div>
           </div>
-          <div id="forecast" class="row">5-Day Forecast</div>
-          <div id="forecastBoxes" class="row">
-            <div id="dayOne" class="col">1</div>
-            <div id="dayTwo" class="col">2</div>
-            <div id="dayThree" class="col">3</div>
-            <div id="dayFour" class="col">4</div>
-            <div id="dayFive" class="col">5</div>
-          </div>
+          <div class="row"><h2>5-day Forecast:</h2></div>
+          <div id="forecast" class="row">
+        
         </div>
       </div>
     </div>
 
     <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
     <script
