dynamically adding bootstrap cards for forecast

--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
           </div>
           <div class="row"><h2>5-day Forecast:</h2></div>
           <div id="forecast" class="row">
-        
+            <!-- <div class="card text-white bg-primary mb-3" style="max-width: 18rem;"> -->
+              <!-- <div class="card-body">
+                <h5 class="card-title"></h5>
+                <p class="card-text1"></p>
+                <p class="card-text2"></p>
+                <p class="card-text3"></p>
+              </div> -->
+            </div>
         </div>
       </div>
     </div>
