--- a/index.html
+++ b/index.html
@@ -64,15 +64,7 @@
             </div>
           </div>
           <div class="row"><h2>5-day Forecast:</h2></div>
-          <div id="forecast" class="row">
-            <!-- <div class="card text-white bg-primary mb-3" style="max-width: 18rem;"> -->
-              <!-- <div class="card-body">
-                <h5 class="card-title"></h5>
-                <p class="card-text1"></p>
-                <p class="card-text2"></p>
-                <p class="card-text3"></p>
-              </div> -->
-            </div>
+          <div id="forecast" class="row"></div>
         </div>
       </div>
     </div>
