added screenshots and previous city section

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
               </div>
             </div>
           </div>
-          <div id="prevCities" class="row">
-            <div class="col"></div>
+          <div class="row">
+            <div id="cityCol" class="col"></div>
           </div>
         </div>
 
